# ProdDevIQ

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.orchestrator/: config.yaml  saga-log.yaml  status.yaml
IDETOOLS/: catalog.md
NEU Sill files/: DEPLOYMENT.md  MKT2700_Pipeline_Setup_Guide.pptx  MKT2700_Team_Presentation_EXAMPLE.pptx  MKT2700_Week5_AI_Pipeline_Walkthrough.pptx  generate-presentation.js  orchestrator.md  phase-1-strategic-foundation.md  phase-3-concept-discovery.md  phase-4-deep-research.md  phase-5-concept-evaluation.md  phase-6-refinement-specification.md  phase-7-prd-generation.md  prd-presentation-SKILL.md  setup-mkt2700-pipeline.sh
deviq-graphrag/: Dockerfile  docker-compose.yaml  pyproject.toml
deviq-graphrag/scripts/: index_catalog.py  query_test.py
deviq-graphrag/src/deviq_graphrag/: __init__.py  config.py  main.py
deviq-graphrag/src/deviq_graphrag/api/: models.py  routes.py
deviq-graphrag/src/deviq_graphrag/graph/: qdrant_store.py  schemas.py
deviq-graphrag/src/deviq_graphrag/indexer/: embedder.py  graph_builder.py  loader.py  relationship_extractor.py
deviq-graphrag/tests/: conftest.py  test_api.py  test_loader.py
docker/: Dockerfile  Dockerfile.shadcn  compose.yaml
docs/: SKILL_ROUTER.md  agent-teams-guide.md  boris-cherny-techniques-analysis.md  dedup-gap-analysis.md  prd-godmodedev-v2-2026-02-08.md  session-capture-2026-02-21.md  student-setup-guide.md
scripts/: add-masters-to-index.mjs  bulk-import-pending.mjs  dedup-index.mjs  deploy-agents.ps1  detect_slides.py  health-check.ps1  setup-dev.ps1
(+3020 files in other folders)
